@@ -1,5 +1,9 @@
 2018-01-14  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* gcc.target/i386/indirect-thunk-register-4.c: New test.
+
+2018-01-14  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* gcc.target/i386/indirect-thunk-1.c (dg-options): Add
 	-mno-indirect-branch-register.
 	* gcc.target/i386/indirect-thunk-2.c: Likewise.
